--- a/web/hacksim.css
+++ b/web/hacksim.css
@@ -1,12 +1,17 @@
-html {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 #area {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+  display: block;
 }
 
 #picking {
